[gd_scene load_steps=4 format=3 uid="uid://0wugmlqjof5s"]

[ext_resource type="Script" uid="uid://b75amcjmke2ke" path="res://boom.gd" id="1_crcy4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4t8dg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_crcy4"]
radius = 300.0

[node name="Boom" type="Area2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_crcy4")

[node name="ProjectileShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4t8dg")

[node name="MeleeShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_crcy4")

[connection signal="area_entered" from="." to="." method="area_entered"]
[connection signal="body_entered" from="." to="." method="body_entered"]
